--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordle Helper</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css"
     integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/grids-responsive-min.css" /> -->
@@ -12,13 +15,17 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div id="app">
-    <div class=""></div>
-    <div v-for="(letter, index) in letters">
-      <div @click="toggleState(index)" class="tile" :data-state="letter.state">{{ letter.text }}</div>
+  <div id="app" @keydown="inputLetter($event, index)">
+    <div class="grid">
+      <div class="tile-outer" v-for="(letter, index) in letters">
+        <div @click="toggleState(index)"
+             class="tile"
+             :data-state="letter.state">
+          {{ letter.text }}
+        </div>
+      </div>
     </div>
   </div>
-  
   <script src="https://unpkg.com/vue@3"></script>
   <script src="./js/words.js"></script>
   <script src="./js/app.js"></script>
