--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 <body>
   <div id="app">
+    <header>
+      <input type="text" placeholder="Start typing to fill in squares">
+    </header>
     <div class="grid">
       <div class="tile-outer" v-for="(letter, index) in letters">
         <div @click="toggleState(index)"
@@ -28,8 +31,6 @@
     <div v-if="indexCounter > 0" class="results-grid">
       <div class="word" v-for="word in wordList">{{ word }}</div>
     </div>
-    <button @click="openKeyboard()">Open Keyboard</button>
-    <input id="hiddenInput" style="visibility: hidden;">
   </div>
   <script src="./js/modernizr_3.6.0.js"></script>
   <script src="https://unpkg.com/vue@3"></script>
