--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
   <div id="app">
     <header>
-      <input type="text" placeholder="Start typing to fill in squares">
+      <h1>Wordle Helper</h1>
+      <input type="text" placeholder="Type to fill squares, click to change state">
     </header>
     <div class="grid">
       <div class="tile-outer" v-for="(letter, index) in letters">
