Improve input field to only show current letter

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css"
-    integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/grids-responsive-min.css" /> -->
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -18,7 +15,7 @@
   <div id="app">
     <header>
       <h1>Wordle Helper</h1>
-      <input type="text" placeholder="Type to fill squares, click to change state">
+      <input type="text" placeholder="Type to fill squares, click to change state" :value="inputValue">
     </header>
     <div class="grid">
       <div class="tile-outer" v-for="(letter, index) in letters">
